# remote-sensing-ml-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: features.py  train_rf.py  utils.py
src/remote_sensing_ml/: features.py  train_cnn.py  train_knn.py  train_svm.py  utils.py
